fix: z-index 우선순위 수정

--- a/week1/assignment/index.css
+++ b/week1/assignment/index.css
@@ -14,7 +14,7 @@ body{
 .nav-topbar{
     position: fixed;
     display: flex;
-    z-index: 1;
+    z-index: 3;
     width: 100%;
     justify-content: space-between;
     align-items: center;
@@ -25,7 +25,6 @@ body{
     justify-content: flex-start;
     list-style-type: none;
     color: white;
-    width: 50%;
     align-items: center;
 }
 
@@ -34,7 +33,6 @@ body{
     justify-content: flex-end;
     list-style-type: none;
     color: white;
-    width: 50%;
 }
 
 .logo{
@@ -57,7 +55,7 @@ body{
 .semi-title{
     padding: 0px 20px;
     position: absolute;
-    z-index: 10;
+    z-index: 1;
     background-color: rgba(255, 255, 255, 1);
     right: 30px;
     bottom: 100px;
@@ -71,7 +69,7 @@ body{
     position: absolute;
     right: 30px;
     bottom: 40px;
-    z-index: 10;
+    z-index: 1;
     background-color: rgba(255, 255, 255, 0.3);
     color:white;
     padding: 10px;
@@ -168,7 +166,7 @@ body{
     background-color: rgba(34, 34, 34, 0.9);
     color: white;
     text-decoration: none;
-    z-index: 10;
+    z-index: 2;
     display: flex;
     justify-content: center;
     align-items: center;
